[package]
name = "l8r"
version = "0.1.1"
description = "Lazy Update Scheduler for Hecs"
license = "MIT"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = "0.2.7"
